# Python_for_DA

./: Task_1.ipynb  Task_3.ipynb
.ipynb_checkpoints/: Task_1-checkpoint.ipynb
Task_2/: Task_2.ipynb  setup.py  strange_conv_cython.c  strange_conv_cython.pyx
Task_4/: .gitignore  README.md  pyproject.toml
Task_4/my_project/: app.py  my_func.py
Task_4/my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Task_4/tests/my_project/: test_my_func.py
